# groundedart

./: .codexignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/scripts/: admin_list_abuse_events.py  admin_list_pending_captures.py  backfill_rank_events.py  ensure_database.py  generate_seed_nodes_from_places.py  reconcile_tip_receipts.py  seed_artists.py  seed_demo_account.py  seed_node_images.py  seed_nodes.py
apps/api/src/groundedart_api/: main.py  settings.py  time.py
apps/api/src/groundedart_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/groundedart_api/api/: errors.py  schemas.py
apps/api/src/groundedart_api/auth/: deps.py  tokens.py
apps/api/src/groundedart_api/db/: engine.py  models.py  session.py
apps/api/src/groundedart_api/domain/: abuse_events.py  attribution_rights.py  capture_events.py  capture_moderation.py  capture_state.py  errors.py  (+15 more)
apps/api/tests/: conftest.py  test_admin_moderation.py  test_api_smoke.py  test_auth_gates.py  test_capture_audit.py  test_capture_notifications.py  test_capture_publish.py  test_capture_state.py  test_capture_tokens.py  test_capture_uploads.py  test_checkin.py  test_domain_schemas.py  test_error_contracts.py  test_node_tips.py  test_nodes.py  test_observability.py  test_rank_events.py  test_reports.py  test_sessions.py  test_tip_receipt_reconciliation.py  test_tip_receipt_reconciliation_rules.py  test_tips_confirm.py  test_tips_intents.py  test_verification_events.py
(+157 files in other folders)
